Delete old FileDownloadTask