@@ -21,17 +21,21 @@ import org.jackhuang.hmcl.util.Hex;
 import org.jackhuang.hmcl.util.io.ChecksumMismatchException;
 import org.jackhuang.hmcl.util.io.CompressingUtils;
 import org.jackhuang.hmcl.util.io.FileUtils;
+import org.jetbrains.annotations.Nullable;
 
-import java.io.File;
 import java.io.IOException;
 import java.io.RandomAccessFile;
-import java.net.URL;
-import java.net.URLConnection;
+import java.net.URI;
+import java.net.http.HttpResponse;
 import java.nio.file.FileSystem;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.security.MessageDigest;
-import java.util.*;
+import java.util.ArrayList;
+import java.util.List;
+import java.util.Locale;
+import java.util.Objects;
+import java.util.Optional;
 
 import static java.util.Objects.requireNonNull;
 import static org.jackhuang.hmcl.util.DigestUtils.getDigest;
@@ -42,7 +46,7 @@ import static org.jackhuang.hmcl.util.logging.Logger.LOG;
  *
  * @author huangyuhui
  */
-public class FileDownloadTask extends FetchTask<Void> {
+public class FileDownloadTask extends FetchTask2<Void> {
 
     public static class IntegrityCheck {
         private final String algorithm;
@@ -78,73 +82,73 @@ public class FileDownloadTask extends FetchTask<Void> {
         }
     }
 
-    private final File file;
+    private final Path file;
     private final IntegrityCheck integrityCheck;
     private Path candidate;
     private final ArrayList<IntegrityCheckHandler> integrityCheckHandlers = new ArrayList<>();
 
     /**
-     * @param url the URL of remote file.
-     * @param file the location that download to.
+     * @param uri the URI of remote file.
+     * @param path the location that download to.
      */
-    public FileDownloadTask(URL url, File file) {
-        this(url, file, null);
+    public FileDownloadTask(URI uri, Path path) {
+        this(uri, path, null);
     }
 
     /**
-     * @param url the URL of remote file.
-     * @param file the location that download to.
+     * @param uri the URI of remote file.
+     * @param path the location that download to.
      * @param integrityCheck the integrity check to perform, null if no integrity check is to be performed
      */
-    public FileDownloadTask(URL url, File file, IntegrityCheck integrityCheck) {
-        this(Collections.singletonList(url), file, integrityCheck);
+    public FileDownloadTask(URI uri, Path path, IntegrityCheck integrityCheck) {
+        this(List.of(uri), path, integrityCheck);
     }
 
     /**
-     * @param url the URL of remote file.
-     * @param file the location that download to.
-     * @param integrityCheck the integrity check to perform, null if no integrity check is to be performed
-     * @param retry the times for retrying if downloading fails.
-     */
-    public FileDownloadTask(URL url, File file, IntegrityCheck integrityCheck, int retry) {
-        this(Collections.singletonList(url), file, integrityCheck, retry);
-    }
-
-    /**
-     * Constructor.
-     * @param urls urls of remote file, will be attempted in order.
-     * @param file the location that download to.
-     */
-    public FileDownloadTask(List<URL> urls, File file) {
-        this(urls, file, null);
-    }
-
-    /**
-     * Constructor.
-     * @param urls urls of remote file, will be attempted in order.
-     * @param file the location that download to.
-     * @param integrityCheck the integrity check to perform, null if no integrity check is to be performed
-     */
-    public FileDownloadTask(List<URL> urls, File file, IntegrityCheck integrityCheck) {
-        this(urls, file, integrityCheck, 3);
-    }
-
-    /**
-     * Constructor.
-     * @param urls urls of remote file, will be attempted in order.
-     * @param file the location that download to.
+     * @param uri the URI of remote file.
+     * @param path the location that download to.
      * @param integrityCheck the integrity check to perform, null if no integrity check is to be performed
      * @param retry the times for retrying if downloading fails.
      */
-    public FileDownloadTask(List<URL> urls, File file, IntegrityCheck integrityCheck, int retry) {
-        super(urls, retry);
-        this.file = file;
+    public FileDownloadTask(URI uri, Path path, IntegrityCheck integrityCheck, int retry) {
+        this(List.of(uri), path, integrityCheck, retry);
+    }
+
+    /**
+     * Constructor.
+     * @param uris uris of remote file, will be attempted in order.
+     * @param file the location that download to.
+     */
+    public FileDownloadTask(List<URI> uris, Path file) {
+        this(uris, file, null);
+    }
+
+    /**
+     * Constructor.
+     * @param uris uris of remote file, will be attempted in order.
+     * @param path the location that download to.
+     * @param integrityCheck the integrity check to perform, null if no integrity check is to be performed
+     */
+    public FileDownloadTask(List<URI> uris, Path path, IntegrityCheck integrityCheck) {
+        this(uris, path, integrityCheck, 3);
+    }
+
+    /**
+     * Constructor.
+     * @param uris uris of remote file, will be attempted in order.
+     * @param path the location that download to.
+     * @param integrityCheck the integrity check to perform, null if no integrity check is to be performed
+     * @param retry the times for retrying if downloading fails.
+     */
+    public FileDownloadTask(List<URI> uris, Path path, IntegrityCheck integrityCheck, int retry) {
+        super(uris, retry);
+        this.file = path;
         this.integrityCheck = integrityCheck;
 
-        setName(file.getName());
+        setName(path.getFileName().toString());
     }
 
-    public File getFile() {
+    public Path getPath() {
         return file;
     }
 
@@ -164,8 +168,8 @@ public class FileDownloadTask extends FetchTask<Void> {
             Optional<Path> cache = repository.checkExistentFile(candidate, integrityCheck.getAlgorithm(), integrityCheck.getChecksum());
             if (cache.isPresent()) {
                 try {
-                    FileUtils.copyFile(cache.get().toFile(), file);
-                    LOG.trace("Successfully verified file " + file + " from " + urls.get(0));
+                    FileUtils.copyFile(cache.get(), file);
+                    LOG.trace("Successfully verified file " + file + " from " + uris.get(0));
                     return EnumCheckETag.CACHED;
                 } catch (IOException e) {
                     LOG.warning("Failed to copy cache files", e);
@@ -178,17 +182,17 @@ public class FileDownloadTask extends FetchTask<Void> {
     }
 
     @Override
-    protected void beforeDownload(URL url) {
-        LOG.trace("Downloading " + url + " to " + file);
+    protected void beforeDownload(URI uri) {
+        LOG.trace("Downloading " + uri + " to " + file);
     }
 
     @Override
     protected void useCachedResult(Path cache) throws IOException {
-        FileUtils.copyFile(cache.toFile(), file);
+        FileUtils.copyFile(cache, file);
     }
 
     @Override
-    protected Context getContext(URLConnection conn, boolean checkETag) throws IOException {
+    protected Context getContext(@Nullable HttpResponse<?> response, boolean checkETag) throws IOException {
         Path temp = Files.createTempFile(null, null);
         RandomAccessFile rFile = new RandomAccessFile(temp.toFile(), "rw");
         MessageDigest digest = integrityCheck == null ? null : integrityCheck.createDigest();
@@ -221,15 +225,15 @@ public class FileDownloadTask extends FetchTask<Void> {
                 }
 
                 for (IntegrityCheckHandler handler : integrityCheckHandlers) {
-                    handler.checkIntegrity(temp, file.toPath());
+                    handler.checkIntegrity(temp, file);
                 }
 
-                Files.deleteIfExists(file.toPath());
-                if (!FileUtils.makeDirectory(file.getAbsoluteFile().getParentFile()))
+                Files.deleteIfExists(file);
+                if (!FileUtils.makeDirectory(file.toFile().getAbsoluteFile().getParentFile()))
                     throw new IOException("Unable to make parent directory " + file);
 
                 try {
-                    FileUtils.moveFile(temp.toFile(), file);
+                    FileUtils.moveFile(temp.toFile(), file.toFile()); // TODO
                 } catch (Exception e) {
                     throw new IOException("Unable to move temp file from " + temp + " to " + file, e);
                 }
@@ -241,14 +245,14 @@ public class FileDownloadTask extends FetchTask<Void> {
 
                 if (caching && integrityCheck != null) {
                     try {
-                        repository.cacheFile(file.toPath(), integrityCheck.getAlgorithm(), integrityCheck.getChecksum());
+                        repository.cacheFile(file, integrityCheck.getAlgorithm(), integrityCheck.getChecksum());
                     } catch (IOException e) {
                         LOG.warning("Failed to cache file", e);
                     }
                 }
 
                 if (checkETag) {
-                    repository.cacheRemoteFile(file.toPath(), conn);
+                    repository.cacheRemoteFile(response, file);
                 }
             }
         };
